[project]
name = "transcript-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipython>=8.36.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
