[project]
name = "transcript-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipython>=8.36.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "langgraph>=0.4.8",
    "langchain-openai>=0.3.18",
    "fastapi[standard]>=0.115.14",
    "streamlit>=1.46.1",
    "langchain-experimental>=0.3.4",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
